package puppy.code.disparo;

import puppy.code.Nave4;
import puppy.code.PantallaJuego;

public interface EstrategiaDisparo {
    void disparar(Nave4 nave, PantallaJuego juego);
}
